feat: use page2tei for tei export and add more advanced modes for other export formats